--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/jpeg">
 
-	<title>wrapper online gold home</title>
-	<meta name="description" content="Wrapper Online Gold is the website edition to wrapper offline.
+	<title>Video List</title>
+	<meta name="description" content="Wrapper Offline's video list
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Wrapper Online Gold Home" />
-	<meta property="og:description" content="Wrapper Online Gold is the website edition to wrapper offline. />
+	<meta property="og:title" content="Video List" />
+	<meta property="og:description" content="Wrapper Offline's video list />
 	<meta property="og:url" content="https://wrapper.online/" />
 	<meta property="og:image:secure_url" content="favicon.ico" /> 
 	<meta property="og:image:" content="favicon.ico" /> 
@@ -22,9 +22,9 @@
 <header>
 	<h1 style="margin:0"><img id="logo" src="../img/logo.png" alt="Wrapper: Online"/></h1>
 	<nav id="headbuttons">
-		
+		<a href="https://wrappershop.ga" class="button_small">SHOP FOR MODS</a>
 		<div class="dropdown_contain button_small">
-			<div class="dropdown_button">Make A Character</div>
+			<div class="dropdown_button">BROWSE CHARACTERS</div>
 			<nav class="dropdown_menu">
 				<h2>Pick a Character Creator Browser</h2>
 				<a href="/cc_browser?themeId=family">Comedy World</a>
@@ -36,6 +36,9 @@
 				<a href="/cc_browser?themeId=botdf">Blood on the Dance Floor</a>
 				<a href="/cc_browser?themeId=cctoonadventure">Toon Adventure</a>
 				<a href="/cc_browser?themeId=spacecitizen">Space Citizen</a>
+								 </nav>
+								 </nav>
+								 </div>
 				<div class="dropdown_contain button_small">
 					<div class="dropdown_button">CREATE A CHARACTER</div>
 					<nav class="dropdown_menu">
@@ -58,7 +61,7 @@
 					</nav>
 			</nav>
 		</div>
-		<a href="themes.html" class="button_big">MAKE A VIDEO</a>
+		<a href="/go_full" class="button_big">MAKE A VIDEO</a>
 	</nav>
 </header>
 
