--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -86,12 +86,13 @@
 
 <footer>
 	<nav id="foot-left">
-		<a href="https://wrapper-online-remastered1.herokuapp.com">Wrapper Online Remastered</a>
+		<a href="https://localhost:4664/faq.html">FAQ</a>
+		<a href="https://discord.gg/yhGAetN">W:O Discord</a>
 	</nav>
 
 	<nav id="foot-right">
-		<a href="https://wrapper.online">Server Page</a>
-		<a href="https://wrapper.online/caillou.html">Caillou</a>
+		<a href="https://localhost:4664">Server Page</a>
+		<a href="https://localhost:4664/caillou.html">Caillou</a>
 	</nav>
 </footer>
 
